﻿i-MSCP ChangeLog

------------------------------------------------------------------------------------------------------------------------
Git 1.2.x
------------------------------------------------------------------------------------------------------------------------

CONFIG
	Added: imscp_panel.service systemd unit file

INSTALLER
	Fixed: Can't locate object method "setVersion" via package Servers::sqld::remote_server
	Fixed: Ensure that mysql service is enabled
	Fixed: Missing 'use iMSCP::Crypt qw/decryptBlowfishCBC/' statement in Servers::sqld::remote_server
	Fixed: Missing 'use iMSCP::Execute qw/escapeShell/' statement in Servers::sqld::remote_server
	Fixed: Missing 'use iMSCP::TemplateParser' statement in Servers::sqld::remote_server
	Fixed: Possible use of uninitialized value $sqlServer in autoinstaller/Adapter/DebianAdapter.pm
	Fixed: sysvinit scripts are not enabled when using systemd (regression fix)

------------------------------------------------------------------------------------------------------------------------
1.2.14
------------------------------------------------------------------------------------------------------------------------

2016-02-25: Laurent Declercq
	RELEASE i-MSCP 1.2.14

FRONTEND
	Fixed: Could not edit reseller PHP permissions (PHP Editor)
	Fixed: Unchecking all disabled functions has no effect (PHP Editor)

INSTALLER
	Fixed: Password must not be escaped (MySQL installer)

------------------------------------------------------------------------------------------------------------------------
1.2.13
------------------------------------------------------------------------------------------------------------------------

2016-02-24: Laurent Declercq
	RELEASE i-MSCP 1.2.13

CONFIG
	Fixed: Missing /php-fpm/php-fpm.pool.default declaration in configs/ubuntu/php-fpm/install.xml
	Updated: Licence header in skeletons

CONTRIB
	Fixed: "my" variable $cfgTpl masks earlier declaration in same scope (20_dovecot_connections.pl)