@@ -7,10 +7,6 @@ server {
     ssl on;
     ssl_certificate {CONF_DIR}/{BASE_SERVER_VHOST}.pem;
     ssl_certificate_key {CONF_DIR}/{BASE_SERVER_VHOST}.pem;
-    ssl_session_timeout 5m;
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-    ssl_ciphers "HIGH:!aNULL:!MD5 or HIGH:!aNULL:!MD5:!3DES";
-    ssl_prefer_server_ciphers on;
 
     root {WEB_DIR}/public;
     index index.php index.html;
