@@ -1,0 +1,5 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<install>
+    <folders>${SYSTEM_CONF}/openssl</folders>
+    <copy_config>${SYSTEM_CONF}/openssl/openssl.cnf.tpl</copy_config>
+</install>
