@@ -7,8 +7,15 @@ default_md = sha256
 default_days = 365
 x509_extensions = v3_req
 string_mask = utf8only
+prompt = no
 
 [req_distinguished_name]
+CN = {COMMON_NAME}
+O = N/A
+L = N/A
+ST = N/A
+C = US
+emailAddress = {EMAIL_ADDRESS}
 
 [v3_req]
 subjectKeyIdentifier = hash
