@@ -573,7 +573,7 @@ sub setupAskSqlUserHost
 	my $rs = 0;
 
 	if(setupGetQuestion('DATABASE_HOST') ne 'localhost') { # Remote MySQL server
-		if($main::reconfigure ~~ ['sql', 'servers', 'all', 'forced'] || ! $host) {
+		if($main::reconfigure ~~ ['sql', 'servers', 'all', 'forced'] || !$host) {
 			do {
 				($rs, $host) = $dialog->inputbox(
 "
